--- a/style.css
+++ b/style.css
@@ -52,13 +52,15 @@ body {
   font-size: x-large;
   padding: 0;
 }
-.hamburger :hover,
-.hamburger .uber:hover {
+.hamburger i:hover
+{
   cursor: pointer;
 }
-.uber:hover {
+
+.hamburger object:hover{
   cursor: pointer;
 }
+
 
 .hamburger i {
   height: 20px;
@@ -69,3 +71,110 @@ body {
 .fa-user {
   padding-right: 5px;
 }
+
+h1 {
+  padding-top: 160px;
+  padding-left: 50px;
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 52px;
+  color: rgb(223, 221, 221);
+}
+
+.container{
+display: inline;
+  margin-top: 45px;
+  width: 100%;
+  padding:0px 50px;
+}
+
+.input-address{
+ align-items: center;
+  background-color: #fff;
+
+padding: 20px 20px;
+}
+.input-address i{
+  font-size: 20px;
+  margin-right: 5px;
+}
+.input-address i:hover{
+  cursor: pointer;
+}
+
+.address {
+  outline: none;
+  border: none;
+  height: 45px;
+  width: 475px;
+   margin-left: 0px;
+   font-size: 15px;
+   font-weight: 500;
+}
+.selector{
+  margin-left: 8px;
+  background-color: #fff;
+  width: 100%;
+  padding: 20px 10px;
+  overflow: hidden;
+
+}
+.deliver{
+  outline: none;
+  border: none;
+
+  font-size: 16px;
+  font-weight: lighter;
+}
+
+.food{
+
+  margin-left: 8px;
+  background-color: #000;
+  width: auto;
+  padding: 18px 10px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  /* background-color: #000; */
+  color: #fff;
+  font-size: 20px;
+  font-weight: lighter;
+}
+.food:hover{
+  background-color: rgb(36, 36, 36);
+  cursor: pointer;
+}
+#now{
+  background-color: #fff;
+  width: 100%;
+  padding: 20px 10px;
+}
+#later{
+  background-color: #fff;
+  width: 100%;
+  padding: 20px 10px;
+}
+
+.line{
+  margin-left: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: lighter;
+  color: #fff;
+}
+
+.sign-in{
+  text-decoration: underline;
+}
+.sign-in:hover{
+  cursor: pointer;
+}
+
+/* .selector select{
+  width: 380px;
+  height: 70px;
+  background-color: #fff;
+  border: none;
+  padding-top: 15px;
+} */
