--- a/business.css
+++ b/business.css
@@ -25,34 +25,128 @@ body {
 .globe i {
   background-color: #fff;
 }
-.form-main {
+.background-form {
   background: url("https://www.uber-assets.com/image/upload/f_auto,q_auto:eco,c_fill,w_1206,h_633/v1658225144/assets/30/7d0851-aad0-4583-a029-f339b38a1a9f/original/SSU_hero_2.png");
   background-repeat: no-repeat;
   background-size: 100%;
- 
-}
-.form {
-  padding: 30px 0px 30px 20px;
-  border-style: solid;
-  margin: 0px 50px 500px 500px;
-  background-color: white;
-  width: 400px;
 }
 
+.get {
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .form-div {
-  margin-top: 0px;
-  
+  margin-left: 770px;
+  border-color: white;
+  border-style: solid;
+  background-color: white;
+  width: 470px;
+  height: 700px;
+  padding: 30px 40px 30px 40px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.details {
+  display: flex;
+  flex-direction: column;
+  padding-right: 250px;
+  height: 45px;
+  margin-top: -5px;
+  background-color: rgb(243, 239, 239);
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.details1 {
+  height: 45px;
+  background-color: rgb(243, 239, 239);
+  width: 210px;
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.email {
+  padding-right: 250px;
+  height: 45px;
+  margin-top: 15px;
+  background-color: rgb(243, 239, 239);
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+.rest {
+  margin-top: 15px;
+  height: 45px;
+  padding-right: 286px;
+  background-color: rgb(243, 239, 239);
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 10px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.loc {
+  margin-top: 15px;
+  height: 45px;
+  padding-right: 395px;
+  background-color: rgb(243, 239, 239);
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .country-code {
-  width: 70px;
+  margin-top: 15px;
+  width: 75px;
+  background-color: rgb(243, 239, 239);
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 24px;
+  font-weight: 1000;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .opt {
   color: #000;
 }
 
-.rest {
-  display: flex;
-  width: auto;
+.tel {
+  margin-left: 5px;
+  padding-right: 165px;
+  margin-top: 15px;
+  background-color: rgb(243, 239, 239);
+  border-style: none;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.h6 {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+  color: rgb(164, 160, 160);
+  line-height: 20px;
+}
+.linkss {
+  color: rgb(164, 160, 160);
+}
+.submit {
+  background-color: #000;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 16px;
+  height: 35px;
+  width: 450px;
+  border-radius: 5px;
+  margin-top: -30px;
+  margin-left: 8px;
 }
