--- a/business.css
+++ b/business.css
@@ -5,7 +5,10 @@ body {
 .strip {
   background-color: black;
   height: 65px;
+  color: #fff;
+  display: flex;
 }
+
 .logo2 {
   height: 39px;
   display: block;
@@ -149,4 +152,21 @@ body {
   border-radius: 5px;
   margin-top: -30px;
   margin-left: 8px;
+}
+
+.text {
+  margin-left: -35px;
+  margin-top: 325px;
+  line-height: 64px;
+  font-weight: 700;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  /* margin-bottom: 1000px; */
+}
+.small {
+  margin-left: -35px;
+  color: #fff;
+  line-height: 25px;
+  font-family: sans-serif;
 }
